--- a/CSS/headerCSS.css
+++ b/CSS/headerCSS.css
@@ -1,3 +1,9 @@
+/*Author: Connor Knight*/
+
+/*This is the css for the header and footer on all pages, as well as the background color. It also creates globle color variibles for the rest of the pages to set a uniform color palet*/
+
+/*All possible fonts that can be used are defined here*/
+
 @font-face{
     font-family: 'plaza';
     src:
@@ -21,6 +27,7 @@
         url('fonts/TitilliumWeb/TitilliumWeb-Regular.ttf') format('truetype');
 }
 
+/*set universal variable colors*/
 :root{
     --main-color: rgb(185, 185, 185);
     --header-color: rgb(216, 216, 216);
@@ -49,24 +56,28 @@
         transition-duration: 0s;
     }
     
+    /*styles the ul*/
     header ul{
         display: flex;
         justify-content: space-evenly;
         padding: 0px;
     }
 
+    /*styles the li*/
     header li{
         display: inline;
         margin: 0px;
         padding: 0px;
     }
 
+    /*styles the link*/
     header li a{
         color: black;
         text-decoration: none;
         padding: 5px;
     }
 
+    /*animates the link on a hover*/
     header li a:hover{
         border-radius: 5px;
         background: rgba(172, 172, 172, 0.5);
@@ -84,6 +95,11 @@
         color: black;
         width: max-content;
     }
+
+    /*this styles the buttons in the footer*/
+    footer > button{
+        border-radius: 5px;
+    }
 }
 
 @media only screen and (min-width: 768px){
@@ -96,6 +112,7 @@
         font-size: 30px;
     }
 
+    /*this preps the link for animating*/
     header li a{
         transition-duration: 1s;
         color: black;
@@ -103,6 +120,7 @@
         padding: 20px;
     }
 
+    /*this animates the link*/
     header li a:hover{
         border-radius: 20px;
         background: rgba(255, 255, 255, 0.774);
@@ -122,16 +140,19 @@
 
 @media only screen and (min-width: 992px){
 
-    /*This is the header*/
+    /*This resizes the font for the bigger size*/
     header{
         font-size: 35px;
     }
     
+    /*this makes the buttons bigger for the bigger screen*/
     header li a{
         padding: 30px;
     }
 
 }
+
+/*this is a global animation that was the back ground but was garbage so was used for other things*/
 @keyframes colorful {
     0%
     {
