--- a/CSS/index layout.css
+++ b/CSS/index layout.css
@@ -67,6 +67,17 @@
         width: 100%;
     }
 
+    .MiiImg2{
+        width: 0px;
+        height: 0px;
+    }
+
+    .MiiImg2 img{
+        visibility: hidden;
+        width: 0px;
+        height: 0px;
+    }
+
     /*tells the bio text in the content section to be at the left side of the section*/
     .bio{
         background-color: var(--main-color);
@@ -97,7 +108,7 @@
     .body{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: fit-content 1fr;
+        grid-template-rows: 3em 1fr 1fr;
         margin: auto;
         padding: 10px;
         width: 90%;
@@ -122,7 +133,7 @@
         grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 2;
-        grid-row-end: 3;
+        grid-row-end: 4;
     }
 
     /*tells the image in the content section to be at the right side of the section*/
@@ -140,6 +151,23 @@
         width: 98%;
         margin-left: 2%;
     }
+
+    /*adds second img into existance*/
+    .MiiImg2{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        width: 100%;
+        height: unset;
+    }
+
+    /*sets some stuff because css is petty*/
+    .MiiImg2 img{
+        width: 100%;
+        height: unset;
+        visibility: visible;
+    }
 }
 
 /*the base setup for all screens bigger than 992px and the specialization for the smaller screen.*/
@@ -149,7 +177,7 @@
     .body{
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: fit-content 2fr 1fr;
+        grid-template-rows: 3em 1fr max-content;
         font-size: 2.4em;
     }
 
@@ -189,6 +217,7 @@
         grid-column-end: 2;
         grid-row-start: 2;
         grid-row-end: 3;
+        height: min-content;
     }
 
     /*the the image what size it should be and how to center itself*/
@@ -197,6 +226,15 @@
         width: 33%;
     }
 
+    /*removes second img from existance*/
+    .MiiImg2 img{
+        grid-column-start: 2;
+        grid-column-end: 2;
+        grid-row-start: 4;
+        grid-row-end: 4;
+        width: 0px;
+        height: 0px;
+    }
 }
 
 /*this tis the media tag for screens of my size (BIGG) or 1400px*/
